--- a/app/templates/contact.hbs
+++ b/app/templates/contact.hbs
@@ -4,19 +4,19 @@
 
     <div class="form-horizontal form-group form-group-lg row">
         <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-1 col-md-8 col-md-offset-2">
-            {{input type="email" value=emailAddress class="form-control"
+            {{input type="email" value=model.email class="form-control"
             placeholder="Please type your e-mail address." autofocus="autofocus"}}
         </div>
     </div>
     <div class="form-horizontal form-group form-group-lg row">
         <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-1 col-md-8 col-md-offset-2">
-            {{input type="text" value=message class="form-control"
+            {{input type="text" value=model.message class="form-control"
             placeholder="Please type your message." autofocus="autofocus"}}
         </div>
     </div>
     <div class="form-horizontal form-group form-group-lg row">
         <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-1 col-md-4 col-md-offset-2">
-            <button class="btn btn-primary btn-lg btn-block" {{action 'sendMessage'}}
+            <button class="btn btn-primary btn-lg btn-block" {{action 'sendMessage' model}}
                     disabled={{isDisabled}}>Send message</button>
         </div>
     </div>
